# ImageLM

./: GEMINI.md  README.md  gemini-conversation-1761224312630.json  pyproject.toml  speedrun.sh
nanochat/: checkpoint_manager.py  dataloader.py  dataset.py  engine.py  gpt.py  image_renderer.py  loss_eval.py  vision_transformer.py
scripts/: base_loss.py  base_train.py  chat_cli.py  chat_eval.py  chat_rl.py  chat_sft.py  chat_web.py  mid_train.py
