[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanochat"
version = "0.1.0"
description = "the minimal full-stack ChatGPT clone"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.117.1",
    "files-to-prompt>=0.6",
    "numpy==1.26.4",
    "psutil>=7.1.0",
    "regex>=2025.9.1",
    "setuptools>=80.9.0",
    "torch>=2.8.0",
    "uvicorn>=0.36.0",
    "wandb>=0.21.3",
    "Pillow>=10.0.0",
    "torchvision>=0.18.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
]
[project.optional-dependencies]
gpu = [][tool.setuptools.packages.find]
include = ["nanochat*"]